@@ -1,7 +1,7 @@
 #/*! \page config_rpmrc Default configuration: /usr/lib/rpm/rpmrc
 # \verbatim
 #
-# $Id: rpmrc.in,v 2.59 2004/03/02 01:31:03 jbj Exp $
+# $Id: rpmrc.in,v 2.60 2004/03/10 23:01:47 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -29,6 +29,7 @@ optflags: alphaev6 -O2 -g -mieee -mcpu=ev6
 optflags: alphaev67 -O2 -g -mieee -mcpu=ev67
 
 optflags: sparc -O2 -g -m32 -mtune=ultrasparc
+optflags: sparcv8 -O2 -g -m32 -mcpu=ultrasparc -mv8
 optflags: sparcv9 -O2 -g -m32 -mcpu=ultrasparc
 optflags: sparc64 -O2 -g -m64 -mcpu=ultrasparc
 
@@ -87,6 +88,7 @@ arch_canon: 	sun4:	sparc	3
 arch_canon: 	sun4m:	sparc	3
 arch_canon: 	sun4c:	sparc	3
 arch_canon:	sun4d:  sparc   3
+arch_canon:   sparcv8: sparcv8	3
 arch_canon:   sparcv9: sparcv9	3
 # This is really a place holder for MIPS.
 arch_canon:	mips:	mips	4
@@ -181,6 +183,7 @@ buildarchtranslate: alphaev67: alpha
 buildarchtranslate: sun4c: sparc
 buildarchtranslate: sun4d: sparc
 buildarchtranslate: sun4m: sparc
+buildarchtranslate: sparcv8: sparc
 buildarchtranslate: sparcv9: sparc
 buildarchtranslate: sun4u: sparc64
 
